clarify column names

--- a/src/census-income.ipynb
+++ b/src/census-income.ipynb
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 19,
    "metadata": {
     "scrolled": true
    },
@@ -468,7 +468,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 20,
    "metadata": {
     "scrolled": true
    },
@@ -684,7 +684,7 @@
        "max        95.000000  "
       ]
      },
-     "execution_count": 14,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -703,7 +703,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -725,8 +725,8 @@
     "                  'Race', 'HispanicOrigin', 'Sex', 'MemLabourUnion', \n",
     "                  'UnemploymentReason', 'EmploymentStatus','FEDERALTAX', \n",
     "                   'TaxFilerStat', 'PrevState', 'HouseholdStatus', \n",
-    "                  'HouseholdSummary', 'MigrationCode (MSA)', 'MigrationCode (REG)', \n",
-    "                  'MigrationCode (WITHIN REG)', 'LiveInHouse', 'MigrationPrevResInSunbelt',\n",
+    "                  'HouseholdSummary', 'MigrationCode_MSA', 'MigrationCode_REG', \n",
+    "                  'MigrationCode_WITHIN_REG', 'LiveInHouse', 'MigrationPrevResInSunbelt',\n",
     "                  'Parent', 'BirthCountryFather', 'BirthCountryMother',\n",
     "                  'BirthCountrySelf', 'Citizenship', 'OwnBusiness', 'VeteranQA', 'VeteranBenefits', \n",
     "                  'Year', 'Income']\n",
@@ -765,7 +765,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 22,
    "metadata": {
     "scrolled": true
    },
@@ -1034,7 +1034,7 @@
        "max        95.000000  "
       ]
      },
-     "execution_count": 16,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1055,7 +1055,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -1097,27 +1097,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 24,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "ValueError",
-     "evalue": "labels ['MigrationCode (MSA)' 'MigrationCode (REG)' 'MigrationCode (WITHIN REG)'] not contained in axis",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-18-c503a5397454>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      2\u001b[0m censusDf_cleaned = censusDf.drop(['MigrationCode (MSA)', 'MigrationCode (REG)', \n\u001b[1;32m      3\u001b[0m                                   \u001b[0;34m'MigrationCode (WITHIN REG)'\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 4\u001b[0;31m                                   'MigrationPrevResInSunbelt'], axis=1)\n\u001b[0m\u001b[1;32m      5\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      6\u001b[0m \u001b[0;31m# Replacing the '?' with the label 'Unavailable'\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m/anaconda/envs/python3.6/lib/python3.6/site-packages/pandas/core/generic.py\u001b[0m in \u001b[0;36mdrop\u001b[0;34m(self, labels, axis, level, inplace, errors)\u001b[0m\n\u001b[1;32m   2159\u001b[0m                 \u001b[0mnew_axis\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0maxis\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mdrop\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mlabels\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mlevel\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mlevel\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0merrors\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0merrors\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   2160\u001b[0m             \u001b[0;32melse\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m-> 2161\u001b[0;31m                 \u001b[0mnew_axis\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0maxis\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mdrop\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mlabels\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0merrors\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0merrors\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m   2162\u001b[0m             \u001b[0mdropped\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mreindex\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m**\u001b[0m\u001b[0;34m{\u001b[0m\u001b[0maxis_name\u001b[0m\u001b[0;34m:\u001b[0m \u001b[0mnew_axis\u001b[0m\u001b[0;34m}\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   2163\u001b[0m             \u001b[0;32mtry\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m/anaconda/envs/python3.6/lib/python3.6/site-packages/pandas/core/indexes/base.py\u001b[0m in \u001b[0;36mdrop\u001b[0;34m(self, labels, errors)\u001b[0m\n\u001b[1;32m   3622\u001b[0m             \u001b[0;32mif\u001b[0m \u001b[0merrors\u001b[0m \u001b[0;34m!=\u001b[0m \u001b[0;34m'ignore'\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   3623\u001b[0m                 raise ValueError('labels %s not contained in axis' %\n\u001b[0;32m-> 3624\u001b[0;31m                                  labels[mask])\n\u001b[0m\u001b[1;32m   3625\u001b[0m             \u001b[0mindexer\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mindexer\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m~\u001b[0m\u001b[0mmask\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   3626\u001b[0m         \u001b[0;32mreturn\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mdelete\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mindexer\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mValueError\u001b[0m: labels ['MigrationCode (MSA)' 'MigrationCode (REG)' 'MigrationCode (WITHIN REG)'] not contained in axis"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Dropping the columns with missing values more than 50% and storing in a new dataframe\n",
-    "censusDf_cleaned = censusDf.drop(['MigrationCode (MSA)', 'MigrationCode (REG)', \n",
-    "                                  'MigrationCode (WITHIN REG)', \n",
+    "censusDf_cleaned = censusDf.drop(['MigrationCode_MSA', 'MigrationCode_REG', \n",
+    "                                  'MigrationCode_WITHIN_REG', \n",
     "                                  'MigrationPrevResInSunbelt'], axis=1)\n",
     "\n",
     "# Replacing the '?' with the label 'Unavailable'\n",
@@ -1133,9 +1119,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Unavailable    708\n",
+      "Name: PrevState, dtype: int64\n",
+      "Unavailable    6713\n",
+      "Name: BirthCountryFather, dtype: int64\n",
+      "Unavailable    6119\n",
+      "Name: BirthCountryMother, dtype: int64\n",
+      "Unavailable    3393\n",
+      "Name: BirthCountrySelf, dtype: int64\n"
+     ]
+    }
+   ],
    "source": [
     "for i in censusDf_cleaned.columns:\n",
     "    if 'Unavailable' in list(censusDf_cleaned[i]):\n",
@@ -1165,7 +1166,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1183,10 +1184,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 42,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "42"
+      ]
+     },
+     "execution_count": 42,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(censusColnames)"
+   ]
   },
   {
    "cell_type": "code",
@@ -1258,9 +1272,154 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 27,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<table class=\"simpletable\">\n",
+       "<caption>OLS Regression Results</caption>\n",
+       "<tr>\n",
+       "  <th>Dep. Variable:</th>         <td>Income</td>      <th>  R-squared:         </th>  <td>   0.195</td> \n",
+       "</tr>\n",
+       "<tr>\n",
+       "  <th>Model:</th>                   <td>OLS</td>       <th>  Adj. R-squared:    </th>  <td>   0.195</td> \n",
+       "</tr>\n",
+       "<tr>\n",
+       "  <th>Method:</th>             <td>Least Squares</td>  <th>  F-statistic:       </th>  <td>   3710.</td> \n",
+       "</tr>\n",
+       "<tr>\n",
+       "  <th>Date:</th>             <td>Tue, 14 Nov 2017</td> <th>  Prob (F-statistic):</th>   <td>  0.00</td>  \n",
+       "</tr>\n",
+       "<tr>\n",
+       "  <th>Time:</th>                 <td>17:15:34</td>     <th>  Log-Likelihood:    </th>  <td>  22185.</td> \n",
+       "</tr>\n",
+       "<tr>\n",
+       "  <th>No. Observations:</th>      <td>199523</td>      <th>  AIC:               </th> <td>-4.434e+04</td>\n",
+       "</tr>\n",
+       "<tr>\n",
+       "  <th>Df Residuals:</th>          <td>199509</td>      <th>  BIC:               </th> <td>-4.420e+04</td>\n",
+       "</tr>\n",
+       "<tr>\n",
+       "  <th>Df Model:</th>              <td>    13</td>      <th>                     </th>      <td> </td>    \n",
+       "</tr>\n",
+       "<tr>\n",
+       "  <th>Covariance Type:</th>      <td>nonrobust</td>    <th>                     </th>      <td> </td>    \n",
+       "</tr>\n",
+       "</table>\n",
+       "<table class=\"simpletable\">\n",
+       "<tr>\n",
+       "             <td></td>               <th>coef</th>     <th>std err</th>      <th>t</th>      <th>P>|t|</th>  <th>[0.025</th>    <th>0.975]</th>  \n",
+       "</tr>\n",
+       "<tr>\n",
+       "  <th>Intercept</th>              <td>   -0.4296</td> <td>    0.092</td> <td>   -4.688</td> <td> 0.000</td> <td>   -0.609</td> <td>   -0.250</td>\n",
+       "</tr>\n",
+       "<tr>\n",
+       "  <th>Age</th>                    <td>    0.0010</td> <td> 3.15e-05</td> <td>   32.642</td> <td> 0.000</td> <td>    0.001</td> <td>    0.001</td>\n",
+       "</tr>\n",
+       "<tr>\n",
+       "  <th>Industry</th>               <td>    0.0004</td> <td> 4.23e-05</td> <td>    9.753</td> <td> 0.000</td> <td>    0.000</td> <td>    0.000</td>\n",
+       "</tr>\n",
+       "<tr>\n",
+       "  <th>Occupation</th>             <td>   -0.0040</td> <td> 4.61e-05</td> <td>  -86.916</td> <td> 0.000</td> <td>   -0.004</td> <td>   -0.004</td>\n",
+       "</tr>\n",
+       "<tr>\n",
+       "  <th>WagePerHr</th>              <td>-8.225e-06</td> <td> 1.81e-06</td> <td>   -4.545</td> <td> 0.000</td> <td>-1.18e-05</td> <td>-4.68e-06</td>\n",
+       "</tr>\n",
+       "<tr>\n",
+       "  <th>CapitalGain</th>            <td> 9.776e-06</td> <td> 1.05e-07</td> <td>   93.318</td> <td> 0.000</td> <td> 9.57e-06</td> <td> 9.98e-06</td>\n",
+       "</tr>\n",
+       "<tr>\n",
+       "  <th>CapitalLoss</th>            <td> 9.952e-05</td> <td>  1.8e-06</td> <td>   55.394</td> <td> 0.000</td> <td>  9.6e-05</td> <td>    0.000</td>\n",
+       "</tr>\n",
+       "<tr>\n",
+       "  <th>Dividends</th>              <td> 1.552e-05</td> <td> 2.48e-07</td> <td>   62.566</td> <td> 0.000</td> <td>  1.5e-05</td> <td>  1.6e-05</td>\n",
+       "</tr>\n",
+       "<tr>\n",
+       "  <th>INSTANCEWEIGHT</th>         <td> 2.085e-06</td> <td> 4.89e-07</td> <td>    4.266</td> <td> 0.000</td> <td> 1.13e-06</td> <td> 3.04e-06</td>\n",
+       "</tr>\n",
+       "<tr>\n",
+       "  <th>NumOfPersonForEmployer</th> <td>    0.0085</td> <td>    0.000</td> <td>   26.763</td> <td> 0.000</td> <td>    0.008</td> <td>    0.009</td>\n",
+       "</tr>\n",
+       "<tr>\n",
+       "  <th>OwnBusiness</th>            <td>   -0.0050</td> <td>    0.001</td> <td>   -5.476</td> <td> 0.000</td> <td>   -0.007</td> <td>   -0.003</td>\n",
+       "</tr>\n",
+       "<tr>\n",
+       "  <th>VeteranBenefits</th>        <td>   -0.0191</td> <td>    0.001</td> <td>  -19.676</td> <td> 0.000</td> <td>   -0.021</td> <td>   -0.017</td>\n",
+       "</tr>\n",
+       "<tr>\n",
+       "  <th>WeeksWorked</th>            <td>    0.0032</td> <td> 3.87e-05</td> <td>   83.109</td> <td> 0.000</td> <td>    0.003</td> <td>    0.003</td>\n",
+       "</tr>\n",
+       "<tr>\n",
+       "  <th>Year</th>                   <td>    0.0044</td> <td>    0.001</td> <td>    4.576</td> <td> 0.000</td> <td>    0.003</td> <td>    0.006</td>\n",
+       "</tr>\n",
+       "</table>\n",
+       "<table class=\"simpletable\">\n",
+       "<tr>\n",
+       "  <th>Omnibus:</th>       <td>119596.189</td> <th>  Durbin-Watson:     </th>  <td>   2.002</td> \n",
+       "</tr>\n",
+       "<tr>\n",
+       "  <th>Prob(Omnibus):</th>   <td> 0.000</td>   <th>  Jarque-Bera (JB):  </th> <td>995579.191</td>\n",
+       "</tr>\n",
+       "<tr>\n",
+       "  <th>Skew:</th>            <td> 2.882</td>   <th>  Prob(JB):          </th>  <td>    0.00</td> \n",
+       "</tr>\n",
+       "<tr>\n",
+       "  <th>Kurtosis:</th>        <td>12.302</td>   <th>  Cond. No.          </th>  <td>8.95e+05</td> \n",
+       "</tr>\n",
+       "</table>"
+      ],
+      "text/plain": [
+       "<class 'statsmodels.iolib.summary.Summary'>\n",
+       "\"\"\"\n",
+       "                            OLS Regression Results                            \n",
+       "==============================================================================\n",
+       "Dep. Variable:                 Income   R-squared:                       0.195\n",
+       "Model:                            OLS   Adj. R-squared:                  0.195\n",
+       "Method:                 Least Squares   F-statistic:                     3710.\n",
+       "Date:                Tue, 14 Nov 2017   Prob (F-statistic):               0.00\n",
+       "Time:                        17:15:34   Log-Likelihood:                 22185.\n",
+       "No. Observations:              199523   AIC:                        -4.434e+04\n",
+       "Df Residuals:                  199509   BIC:                        -4.420e+04\n",
+       "Df Model:                          13                                         \n",
+       "Covariance Type:            nonrobust                                         \n",
+       "==========================================================================================\n",
+       "                             coef    std err          t      P>|t|      [0.025      0.975]\n",
+       "------------------------------------------------------------------------------------------\n",
+       "Intercept                 -0.4296      0.092     -4.688      0.000      -0.609      -0.250\n",
+       "Age                        0.0010   3.15e-05     32.642      0.000       0.001       0.001\n",
+       "Industry                   0.0004   4.23e-05      9.753      0.000       0.000       0.000\n",
+       "Occupation                -0.0040   4.61e-05    -86.916      0.000      -0.004      -0.004\n",
+       "WagePerHr              -8.225e-06   1.81e-06     -4.545      0.000   -1.18e-05   -4.68e-06\n",
+       "CapitalGain             9.776e-06   1.05e-07     93.318      0.000    9.57e-06    9.98e-06\n",
+       "CapitalLoss             9.952e-05    1.8e-06     55.394      0.000     9.6e-05       0.000\n",
+       "Dividends               1.552e-05   2.48e-07     62.566      0.000     1.5e-05     1.6e-05\n",
+       "INSTANCEWEIGHT          2.085e-06   4.89e-07      4.266      0.000    1.13e-06    3.04e-06\n",
+       "NumOfPersonForEmployer     0.0085      0.000     26.763      0.000       0.008       0.009\n",
+       "OwnBusiness               -0.0050      0.001     -5.476      0.000      -0.007      -0.003\n",
+       "VeteranBenefits           -0.0191      0.001    -19.676      0.000      -0.021      -0.017\n",
+       "WeeksWorked                0.0032   3.87e-05     83.109      0.000       0.003       0.003\n",
+       "Year                       0.0044      0.001      4.576      0.000       0.003       0.006\n",
+       "==============================================================================\n",
+       "Omnibus:                   119596.189   Durbin-Watson:                   2.002\n",
+       "Prob(Omnibus):                  0.000   Jarque-Bera (JB):           995579.191\n",
+       "Skew:                           2.882   Prob(JB):                         0.00\n",
+       "Kurtosis:                      12.302   Cond. No.                     8.95e+05\n",
+       "==============================================================================\n",
+       "\n",
+       "Warnings:\n",
+       "[1] Standard Errors assume that the covariance matrix of the errors is correctly specified.\n",
+       "[2] The condition number is large, 8.95e+05. This might indicate that there are\n",
+       "strong multicollinearity or other numerical problems.\n",
+       "\"\"\""
+      ]
+     },
+     "execution_count": 27,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Constructing a linearmodel using the ordinal values for our initial hypothesis test\n",
     "hypothesis_test_model = smf.ols(formula=(\"Income ~ Age + Industry + Occupation + \"\n",
@@ -1299,9 +1458,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 28,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0    187141\n",
+      "1     12382\n",
+      "Name: Income, dtype: int64\n",
+      "0.9379419916500854\n"
+     ]
+    }
+   ],
    "source": [
     "# Getting the count\n",
     "incomeCount = censusDf_cleaned['Income'].value_counts()\n",
