--- a/src/census-income.ipynb
+++ b/src/census-income.ipynb
@@ -1553,7 +1553,7 @@
     "    - Ridge/Lasso Regression\n",
     "    - Support Vector Machines\n",
     "- Create diagnostic tools for the models.\n",
-    "- Define a metric to compare"
+    "- Define a metric to compare the models."
    ]
   },
   {
